2019-09-01      Gaius Mulley <gaius.mulley@southwales.ac.uk>

	* gm2/patches/gcc/trunk:  all patches recreated.

2019-08-31      Gaius Mulley <gaius.mulley@southwales.ac.uk>

	* testsuite/gm2/pim/run/pass/gm2.exp:  remove -fsoft-check-all.
	* gm2/gm2-gcc/m2expr.c:  (checkWholeModFloorOverflow) updated
          and tidied up comments now that BuildDivCeilCheck is
          implemented.  (Generally tidied up comments as per
          GCC coding standards).  (checkWholeDivCeilOverflow)
          check for rhs < 0 in ISO M2 which must raise an exception.
	* gm2/tools-src/def2texi.py:  utilize 2to3 to convert Python 2
	  into Python 3 code.

2019-08-29      Gaius Mulley <gaius.mulley@southwales.ac.uk>

	* Checking overflow/underflow for DIV_CEIL implemented.
	* gm2/gm2-compiler/M2Base.mod:  renamed the base types,
	  Z, R, C so that error messages are improved.
	* gm2/gm2-gcc/m2expr.c:  (BuildPostInc) New function.
          (BuildPostDec) New function.  (BuildDivCeilCheck)
          New function.  (BuildLessThanOrEqualZero) New function.
          (divCeilOverflowPosPos) New function.
          (divCeilOverflowPosNeg) New function.
          (divCeilOverflowPosNeg) New function.
          (divCeilOverflowNegPos) New function.
          (divCeilOverflowNegNeg) New function.
	  (divCeilOverflowCases) New function.
          (checkWholeDivCeilOverflow) New function.
	  (m2expr_BuildDivM2Check) call BuildDivCeilCheck.

2019-08-24      Gaius Mulley <gaius.mulley@southwales.ac.uk>

	* gm2/gm2-lang.c:  (gm2_langhook_handle_option)
          flag_excess_precision_cmdline replaced by
          flag_excess_precision.

2019-08-23      Gaius Mulley <gaius.mulley@southwales.ac.uk>

	* gm2/gm2-gcc/m2expr.c:  (checkWholeNegateOverflow) return
          checking tree.  (m2expr_checkUnaryWholeOverflow)
          return checking tree.  (m2expr_build_unary_op_check)
          ensure that the checking tree is combined with the
          result tree using a COMPOUND_EXPR.